--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,33 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+#title {
+  text-align: center;
+  font-family: arial, sans-serif;
+}
+
+#passengers {
+  text-align: center;
+  font-family: "Trebuchet MS", Arial, Helvetica, sans-serif;
+  border-collapse: collapse;
+  border: 3px solid #ddd;
+  width: 100%;
+}
+
+#passengers td, #passengers th {
+  border: 1px solid #ddd;
+  padding: 8px;
+}
+
+#passengers tr:nth-child(even){background-color: #f2f2f2;}
+
+#passengers tr:hover {background-color: #ddd;}
+
+#passengers th {
+  padding-top: 12px;
+  padding-bottom: 12px;
+  text-align: center;
+  background-color: #4CAF50;
+  color: white;
+}
