--- a/src/index.css
+++ b/src/index.css
@@ -45,3 +45,24 @@ code {
 hr {
   border: 1px solid red;
 }
+.square {
+  background-color: green;
+  border: 1px solid #999;
+  float: left;
+  font-size: 24px;
+  font-weight: bold;
+  line-height: 34px;
+  height: 34px;
+  margin-right: -1px;
+  margin-top: -1px;
+  padding: 0;
+  text-align: center;
+  width: 34px;
+}
+
+/* background-color: green;
+height: 12px;
+width: 25px;
+margin: 3px;
+border-top-left-radius: 10px;
+border-top-right-radius: 10px; */
